--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.3",
+    "iyzipay": "^2.0.61",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
 }
