--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,14 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "iyzipay": "^2.0.61",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
-    "mongoose": "^8.2.0",
+    "mongoose": "^8.3.4",
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.1.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
