--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
