--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -18,12 +23,16 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.7.2",
+    "framer-motion": "^11.2.10",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "react-scrollable-feed": "^2.0.2",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
